# MemoryManagement

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  SystemSoftware_MemoryManagement.cbp  cmake_install.cmake
src/: Block.cpp  Block.hpp  Declarations.hpp  FreeBlock.cpp  FreeBlock.hpp  Heap.cpp  Heap.hpp  LectNode.cpp  LectNode.hpp  Lecture.cpp  Lecture.hpp  SlideBlock.cpp  SlideBlock.hpp  StudNode.cpp  StudNode.hpp  Student.cpp  Student.hpp  StudentList.cpp  StudentList.hpp  TypeDescriptor.cpp  TypeDescriptor.hpp  UsedBlock.cpp  UsedBlock.hpp  main.cpp
